[gd_scene load_steps=45 format=3 uid="uid://cseirvljks3fe"]

[ext_resource type="Script" path="res://Scrpits/DeathLamp.gd" id="1_r72vd"]
[ext_resource type="Texture2D" uid="uid://cee7nuslemuep" path="res://Assets/Enemys/DeathLamp/death-lamp-rise.png" id="2_byf18"]
[ext_resource type="Texture2D" uid="uid://b14kynn8s8o2j" path="res://Assets/Enemys/DeathLamp/death-lamp-walk.png" id="3_8qomj"]
[ext_resource type="AudioStream" uid="uid://dfpqvm4laxcko" path="res://SoundFX/Minifantasy_Dungeon_SFX/11_human_damage_1.wav" id="4_khu5s"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_uqyfg"]
blend_mode = 1
light_mode = 2
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id="Gradient_aco7p"]
offsets = PackedFloat32Array(0, 0.645161)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1wmpd"]
gradient = SubResource("Gradient_aco7p")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.513761, 0.490826)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_u8e2u"]
blend_mode = 1
light_mode = 2

[sub_resource type="Gradient" id="Gradient_0rmar"]
offsets = PackedFloat32Array(0, 0.567742)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t6x6n"]
gradient = SubResource("Gradient_0rmar")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.490826, 0.477064)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hnqtx"]
blend_mode = 1
light_mode = 2
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id="Gradient_gmaye"]
offsets = PackedFloat32Array(0, 0.645161)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_s0bge"]
gradient = SubResource("Gradient_gmaye")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.513761, 0.490826)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_j6hyl"]
blend_mode = 1
light_mode = 2

[sub_resource type="Gradient" id="Gradient_mgg7p"]
offsets = PackedFloat32Array(0, 0.567742)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3mlxr"]
gradient = SubResource("Gradient_mgg7p")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.490826, 0.477064)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_x7jod"]
blend_mode = 1
light_mode = 2
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id="Gradient_v777e"]
offsets = PackedFloat32Array(0, 0.645161)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jcy1i"]
gradient = SubResource("Gradient_v777e")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.513761, 0.490826)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_gcshl"]
blend_mode = 1
light_mode = 2

[sub_resource type="Gradient" id="Gradient_pb3yq"]
offsets = PackedFloat32Array(0, 0.567742)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_de25r"]
gradient = SubResource("Gradient_pb3yq")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.490826, 0.477064)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y7f6c"]
radius = 7.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xw5de"]
radius = 7.0

[sub_resource type="Animation" id="Animation_ff3d5"]
resource_name = "Death"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D2Walk:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hixcx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../DeathLampRise:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../DeathLampWalk:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pqdky"]
resource_name = "Rise"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../DeathLampRise:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../DeathLampRise:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"ready"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_yvoel"]
resource_name = "Walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../DeathLampWalk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../DeathLampWalk:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pcvus"]
_data = {
"Death": SubResource("Animation_ff3d5"),
"RESET": SubResource("Animation_hixcx"),
"Rise": SubResource("Animation_pqdky"),
"Walk": SubResource("Animation_yvoel")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t33w4"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qvw7e"]
animation = &"Rise"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dr386"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5wivr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j2dyy"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_waoti"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jh41s"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hntth"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_q41s2"]
states/Death/node = SubResource("AnimationNodeAnimation_t33w4")
states/Death/position = Vector2(741, 23)
states/Rise/node = SubResource("AnimationNodeAnimation_qvw7e")
states/Rise/position = Vector2(298, 80)
states/Walk/node = SubResource("AnimationNodeAnimation_dr386")
states/Walk/position = Vector2(485, 174)
transitions = ["Start", "Rise", SubResource("AnimationNodeStateMachineTransition_5wivr"), "Rise", "Walk", SubResource("AnimationNodeStateMachineTransition_j2dyy"), "Walk", "Death", SubResource("AnimationNodeStateMachineTransition_waoti"), "Death", "End", SubResource("AnimationNodeStateMachineTransition_jh41s"), "Rise", "Death", SubResource("AnimationNodeStateMachineTransition_hntth")]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_co27w"]
blend_mode = 1
light_mode = 2
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id="Gradient_617qu"]
offsets = PackedFloat32Array(0, 0.645161)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fjyr1"]
gradient = SubResource("Gradient_617qu")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.513761, 0.490826)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_i8vo5"]
blend_mode = 1
light_mode = 2

[sub_resource type="Gradient" id="Gradient_1olxx"]
offsets = PackedFloat32Array(0, 0.567742)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pq4jy"]
gradient = SubResource("Gradient_1olxx")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.490826, 0.477064)

[node name="DeathLamp" type="CharacterBody2D" groups=["enemies"]]
scale = Vector2(1.5, 1.5)
collision_layer = 4
script = ExtResource("1_r72vd")

[node name="IceLight2D" type="PointLight2D" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_uqyfg")
enabled = false
color = Color(0, 0.496518, 0.99163, 0.898039)
texture = SubResource("GradientTexture2D_1wmpd")

[node name="Alo" type="Sprite2D" parent="IceLight2D"]
modulate = Color(0, 0.498039, 0.992157, 0.898039)
light_mask = 2
visibility_layer = 3
material = SubResource("CanvasItemMaterial_u8e2u")
position = Vector2(-0.666667, 0)
scale = Vector2(0.5, 0.5)
texture = SubResource("GradientTexture2D_t6x6n")

[node name="ToxicLight2D" type="PointLight2D" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_hnqtx")
enabled = false
color = Color(0.0966688, 0.621642, 9.62615e-07, 0.898039)
texture = SubResource("GradientTexture2D_s0bge")

[node name="Alo" type="Sprite2D" parent="ToxicLight2D"]
modulate = Color(0.0980392, 0.623529, 0, 0.898039)
light_mask = 2
visibility_layer = 3
material = SubResource("CanvasItemMaterial_j6hyl")
position = Vector2(-0.666667, 0)
scale = Vector2(0.5, 0.5)
texture = SubResource("GradientTexture2D_3mlxr")

[node name="PointLight2D" type="PointLight2D" parent="."]
material = SubResource("CanvasItemMaterial_x7jod")
position = Vector2(0, 16)
scale = Vector2(0.5, 0.5)
enabled = false
color = Color(1, 0.152941, 0.0823529, 0.745098)
texture = SubResource("GradientTexture2D_jcy1i")

[node name="Alo" type="Sprite2D" parent="PointLight2D"]
modulate = Color(0.843137, 0.14902, 0.384314, 0.905882)
light_mask = 2
visibility_layer = 3
material = SubResource("CanvasItemMaterial_gcshl")
position = Vector2(-0.666667, 0)
scale = Vector2(0.5, 0.5)
texture = SubResource("GradientTexture2D_de25r")

[node name="DeathLamp" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathLamp"]
position = Vector2(0, 9)
shape = SubResource("CapsuleShape2D_y7f6c")
disabled = true

[node name="DeathLampWalk" type="Sprite2D" parent="."]
texture = ExtResource("3_8qomj")
hframes = 6

[node name="DeathLampRise" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_byf18")
hframes = 11

[node name="CollisionShape2D2Walk" type="CollisionShape2D" parent="."]
light_mask = 4
visibility_layer = 3
position = Vector2(0, 9)
shape = SubResource("CapsuleShape2D_xw5de")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../DeathLamp")
libraries = {
"": SubResource("AnimationLibrary_pcvus")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../DeathLamp")
tree_root = SubResource("AnimationNodeStateMachine_q41s2")
anim_player = NodePath("../AnimationPlayer")

[node name="ArrowDamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_khu5s")

[node name="ToxicLight2D2" type="PointLight2D" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_co27w")
enabled = false
color = Color(0.0966688, 0.621642, 9.62615e-07, 0.898039)
texture = SubResource("GradientTexture2D_fjyr1")

[node name="Alo" type="Sprite2D" parent="ToxicLight2D2"]
modulate = Color(0.0980392, 0.623529, 0, 0.898039)
light_mask = 2
visibility_layer = 3
material = SubResource("CanvasItemMaterial_i8vo5")
position = Vector2(-0.666667, 0)
scale = Vector2(0.5, 0.5)
texture = SubResource("GradientTexture2D_pq4jy")

[connection signal="body_entered" from="DeathLamp" to="." method="_on_death_lamp_body_entered"]
